--- a/index.css
+++ b/index.css
@@ -46,14 +46,18 @@ body {
 
 h1,
 h2 {
+  color: #000;
   text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.7);
+}
+p {
+  color: #000;
 }
 
 /* Styling for the navbar brand (logo) */
 .navbar-brand {
   font-weight: 550;
   font-size: 1.5rem;
-  color: #2c3e50;
+  color: #000;
   position: relative; /* For positioning the underline effect */
 }
 
@@ -62,7 +66,7 @@ h2 {
   position: absolute;
   width: 0;
   height: 3px;
-  background-color: #2c3e50;
+  background-color: #000;
   bottom: 0;
   left: 50%;
   transition: width 0.3s ease, left 0.3s ease;
@@ -76,7 +80,7 @@ h2 {
 /* Styling for the nav links */
 .nav-link {
   font-weight: bold;
-  color: #2c3e50;
+  color: #000;
   position: relative;
   display: inline-block;
 }
@@ -86,7 +90,7 @@ h2 {
   position: absolute;
   width: 0;
   height: 3px;
-  background-color: #2c3e50;
+  background-color: #000;
   bottom: 0;
   left: 50%;
   transition: width 0.3s ease, left 0.3s ease;
@@ -107,7 +111,7 @@ h2 {
 
 .btn-warning {
   background-color: #ffee58;
-  color: #2c3e50;
+  color: #000;
   border: none;
   padding: 10px 20px;
   font-size: 18px;
@@ -118,6 +122,7 @@ h2 {
 
 .btn-warning:hover {
   background-color: #ffd700;
+  color: #000;
 }
 
 .btn-warning:active {
@@ -188,10 +193,12 @@ h2 {
   display: flex;
   flex-wrap: wrap;
   align-items: center;
-  justify-content: center;
+  justify-content: space-between;
 }
 
 .intro-text .text {
+  display: flex;
+  height: auto;
   flex: 1;
   padding: 20px;
 }
@@ -202,6 +209,7 @@ h2 {
 }
 
 .intro-text img {
+  cursor: pointer;
   max-width: 100%;
   height: auto;
   border-radius: 10px;
@@ -278,7 +286,7 @@ header.visible {
 .image {
   position: relative;
   width: 100%;
-  height: 400px; /* Set a fixed height for the slideshow */
+  height: 355px;
   overflow: hidden;
 }
 
@@ -289,9 +297,9 @@ header.visible {
   left: 0;
   width: 100%;
   height: 100%;
-  object-fit: cover; /* Ensure the image covers the area */
+  object-fit: cover;
   opacity: 0;
-  transition: opacity 1s ease-in-out; /* Smooth transition */
+  transition: opacity 1s ease-in-out;
 }
 
 /* Ensure the first image is visible initially */
@@ -389,12 +397,12 @@ header.visible {
 }
 
 /* mission css */
-#mission {
+#vision {
   background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)),
     url("https://www.kubota.com/sustainability/society/community/images/kubota-forest/img_hero.jpg")
       no-repeat center center/cover;
   color: white;
-  height: 40vh;
+  height: 50vh;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -445,4 +453,12 @@ header.visible {
 .animate-on-view.visible {
   opacity: 1;
   transform: translateY(0) scale(1); /* End position and scale */
+}
+
+#trees {
+  padding-top: 9%;
+}
+
+#seeds {
+  padding-top: 5%;
 }
